2003-04-30  Ettore Perazzoli  <ettore@ximian.com>

	* e-request.c (e_request_string): Handle GTK_RESPONSE_NONE.
	[#42038]

2003-04-24  Chris Toshok  <toshok@ximian.com>

	[ for bug #41211 ]
	
	* e-gui-utils.h (e_button_new_with_stock_icon): add prototype.

	* e-gui-utils.c (e_button_new_with_stock_icon): new function,
	allow us to create a custom labeled button with a stock icon.

2003-04-28  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c: Added #include <netinet/in.h> for the
	sockaddr_in6 typedef for at least MacOS X.

2003-04-17  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyname_r): Keep our buf ptr aligned to
	sizeof (char *). Should fix bug #41362.
	(e_gethostbyaddr_r): Same.

2003-04-18  Anna Marie Dirks  <anna@ximian.com>

	* e-request.c (e_request_string): Added appropriate spacing/padding 
	to the rename dialogs. Fixes bugs #41040, #41036, #41038

2003-04-18  Ettore Perazzoli  <ettore@ximian.com>

	* e-gtk-utils.c (e_gtk_button_new_with_icon): Remove debugging
	message.

2003-04-14  Jeffrey Stedfast  <fejj@ximian.com>

	* e-sexp.c: Finished an #if 0'd out port to GObject from an #if
	0'd out GtkObject subclassing.

2003-04-15  Hans Petter Jansson  <hpj@ximian.com>

	* e-sexp.c (e_sexp_add_function)
	(e_sexp_add_ifunction): Make sure any old symbol with the same name
	as the one being added, is removed first.

2003-04-14  Not Zed  <NotZed@Ximian.com>

	* e-gtk-utils.c (e_gtk_button_new_with_icon): Utility function to
	create a button with a stock icon.

2003-04-09  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyaddr_r): Change the 'len' argument to
	'addrlen' so that when IPv6 is enabled, our temp vriable (also
	named len) does not cause confusion. Fixes bug #40979.

2003-04-05  Ettore Perazzoli  <ettore@ximian.com>

	* e-passwords.c (e_passwords_remember_password): Removed debugging
	message that would spit out the actual password, albeit in encoded
	form.

2003-04-04  Dan Winship  <danw@ximian.com>
